--- a/DELauncher/Window1.xaml
+++ b/DELauncher/Window1.xaml
@@ -1,8 +1,101 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Window
 	x:Class="DELauncher.Window1" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	Title="DELauncher"
-	Height="550"
-	Width="800">
-	<Grid></Grid>
+	Height="700"
+	Width="1024"
+	ResizeMode="NoResize"
+	ShowInTaskbar="True"
+	ContextMenuService.IsEnabled="False"
+	WindowStyle="None" ContentRendered="AfterRender">
+	
+	
+	
+	<!-- Resources -->
+	<Window.Resources>
+		<Style x:Key="Body" TargetType="{x:Type StackPanel}">
+			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="Background" Value="#070a0d" />
+			<Setter Property="Width" Value="1024px" />
+			<Setter Property="Height" Value="700px" />
+		</Style>
+		<Style x:Key="TopLine" TargetType="{x:Type WrapPanel}">
+			<Setter Property="HorizontalAlignment" Value="Right" />
+			<Setter Property="VerticalAlignment" Value="Top" />
+			<Setter Property="Width" Value="1024px" />
+			<Setter Property="Height" Value="29px" />
+		</Style>
+		<Style x:Key="Header" TargetType="{x:Type WrapPanel}">
+			<Setter Property="HorizontalAlignment" Value="Center" />
+			<Setter Property="Width" Value="1024px" />
+			<Setter Property="Height" Value="148px" />
+		</Style>
+		<Style x:Key="HeaderBox" TargetType="{x:Type WrapPanel}">
+			<Setter Property="HorizontalAlignment" Value="Center" />
+			<Setter Property="Width" Value="700px" />
+			<Setter Property="Height" Value="148px" />
+			<Setter Property="Background" Value="#322923" />
+		</Style>
+		<Style x:Key="LabelSt" TargetType="{x:Type Label}">
+			<Setter Property="Foreground" Value="#ada19d" />
+		</Style>
+		<Style x:Key="ButtonSt" TargetType="{x:Type Button}">
+			<Setter Property="Background" Value="#362926" />
+			<Setter Property="Foreground" Value="#c9c9c9" />
+			<Setter Property="FontWeight" Value="ExtraBold" />
+			<Setter Property="FontSize" Value="14px" />
+			<Setter Property="Margin" Value="2,2,2,2" />
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type Button}">
+						<Border CornerRadius="4" Background="{TemplateBinding Background}">
+							<ContentPresenter x:Name="cPresenter" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+						</Border>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsMouseOver" Value="True">
+								<Setter Property="Background" Value="#362926" />
+								<Setter Property="Foreground" Value="White" />
+							</Trigger>
+							<Trigger Property="IsPressed" Value="True">
+								<Setter Property="Background" Value="#362926" />
+								<Setter Property="Foreground" Value="#140804" />
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+	</Window.Resources>
+
+
+	
+	<!-- Template -->
+	<StackPanel Style="{StaticResource Body}" Mouse.MouseDown="MouseDown" Mouse.MouseUp="MouseUp" Mouse.MouseMove="MouseMove">
+		<WrapPanel Style="{StaticResource TopLine}">
+			<Label Content="" Foreground="#656565" FontSize="11px" x:Name="LauncherTitle" HorizontalAlignment="Right" Width="997px" />
+			<Button Style="{StaticResource ButtonSt}" Width="23px" Height="23px" Click="Exit">
+				<Image>
+					<Image.Style>
+						<Style TargetType="{x:Type Image}">
+							<Setter Property="Source" Value="pack://application:,,,/IconClose.png" />
+							<Style.Triggers>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Source" Value="pack://application:,,,/IconCloseHover.png" />
+								</Trigger>
+							</Style.Triggers>
+						</Style>
+					</Image.Style>
+				</Image>
+			</Button>
+		</WrapPanel>
+		<WrapPanel Style="{StaticResource Header}">
+			<Image Source="pack://application:,,,/logo.png" Width="280px" Height="148px" />
+			<Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="#3d2c06" BorderThickness="2">
+				<WrapPanel Style="{StaticResource HeaderBox}">
+					<Label Style="{StaticResource LabelSt}" Width="700px" HorizontalAlignment="Left" Content="" x:Name="PatchActivity" />
+				</WrapPanel>
+			</Border>
+		</WrapPanel>
+	</StackPanel>
 </Window>
